--- a/src/main/resources/templates/user_create.html
+++ b/src/main/resources/templates/user_create.html
@@ -13,9 +13,9 @@
 
     <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/vendor/metisMenu/metisMenu.min.css}" rel="stylesheet"/>
-    <link th:href="@{/dist/css/sb-admin-2.css}" rel="stylesheet"/>
-    <link th:href="@{/dist/css/jquery.bootstrap-touchspin.css}" rel="stylesheet"/>
-    <link th:href="@{/dist/css/datepicker.css}" rel="stylesheet"/>
+    <link th:href="@{/stake/css/sb-admin-2.css}" rel="stylesheet"/>
+    <link th:href="@{/stake/css/jquery.bootstrap-touchspin.css}" rel="stylesheet"/>
+    <link th:href="@{/stake/css/datepicker.css}" rel="stylesheet"/>
     <link th:href="@{/vendor/font-awesome/css/font-awesome.min.css}" rel="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -109,9 +109,9 @@
 <script th:src="@{/vendor/jquery/jquery.min.js}"/>
 <script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"/>
 <script th:src="@{/vendor/metisMenu/metisMenu.min.js}"/>
-<script th:src="@{/dist/js/sb-admin-2.js}"/>
-<script th:src="@{/dist/js/jquery.bootstrap-touchspin.js}"/>
-<script th:src="@{/dist/js/bootstrap-datepicker.js}"/>
+<script th:src="@{/stake/js/sb-admin-2.js}"/>
+<script th:src="@{/stake/js/jquery.bootstrap-touchspin.js}"/>
+<script th:src="@{/stake/js/bootstrap-datepicker.js}"/>
 
 <script>
     $('.datepicker').datepicker();
