--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
     <link href="../vendor/bootstrap/css/bootstrap.min.css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
     <link href="../vendor/metisMenu/metisMenu.min.css" th:href="@{/vendor/metisMenu/metisMenu.min.css}" rel="stylesheet"/>
     <link href="../vendor/morrisjs/morris.css" th:href="@{/vendor/metisMenu/metisMenu.min.css}" rel="stylesheet"/>
-    <link href="../dist/css/sb-admin-2.css" th:href="@{/dist/css/sb-admin-2.css}" rel="stylesheet"/>
+    <link href="../stake/css/sb-admin-2.css" th:href="@{/stake/css/sb-admin-2.css}" rel="stylesheet"/>
     <link href="../vendor/font-awesome/css/font-awesome.min.css" th:href="@{/vendor/font-awesome/css/font-awesome.min.css}" rel="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -124,7 +124,7 @@
 <script src="../vendor/raphael/raphael.min.js" th:src="@{/vendor/metisMenu/metisMenu.min.js}"/>
 <script src="../vendor/morrisjs/morris.min.js" th:src="@{/vendor/metisMenu/metisMenu.min.js}"/>
 <script src="../data/morris-data.js" th:src="@{/vendor/metisMenu/metisMenu.min.js}"/>
-<script src="../dist/js/sb-admin-2.js" th:src="@{/dist/js/sb-admin-2.js}"/>
+<script src="../stake/js/sb-admin-2.js" th:src="@{/stake/js/sb-admin-2.js}"/>
 <!-- jQuery -->
 
 <form id="logoutForm" action="/logout" method="post">
