--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 
     <link href="../vendor/bootstrap/css/bootstrap.min.css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
     <link href="../vendor/metisMenu/metisMenu.min.css" th:href="@{/vendor/metisMenu/metisMenu.min.css}" rel="stylesheet"/>
-    <link href="../dist/css/sb-admin-2.css" th:href="@{/dist/css/sb-admin-2.css}" rel="stylesheet"/>
+    <link href="../stake/css/sb-admin-2.css" th:href="@{/stake/css/sb-admin-2.css}" rel="stylesheet"/>
     <link href="../vendor/font-awesome/css/font-awesome.min.css" th:href="@{/vendor/font-awesome/css/font-awesome.min.css}" rel="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -68,7 +68,7 @@
     <script src="../vendor/jquery/jquery.min.js" th:src="@{/vendor/jquery/jquery.min.js}"/>
     <script src="../vendor/bootstrap/js/bootstrap.min.js" th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"/>
     <script src="../vendor/metisMenu/metisMenu.min.js" th:src="@{/vendor/metisMenu/metisMenu.min.js}"/>
-    <script src="../dist/js/sb-admin-2.js" th:src="@{/dist/js/sb-admin-2.js}"/>
+    <script src="../stake/js/sb-admin-2.js" th:src="@{/stake/js/sb-admin-2.js}"/>
 
 </body>
 
